[gd_scene load_steps=5 format=2]

[ext_resource path="res://Textbox.gd" type="Script" id=1]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color( 0.45098, 0.45098, 0.45098, 1 )

[sub_resource type="DynamicFontData" id=4]
font_path = "res://Adventurer.ttf"

[sub_resource type="DynamicFont" id=3]
size = 11
font_data = SubResource( 4 )

[node name="Textbox" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="TextboxContainer" type="MarginContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = -58.0
margin_right = -39.0
margin_bottom = -14.0

[node name="Panel" type="Panel" parent="TextboxContainer"]
margin_right = 241.0
margin_bottom = 44.0
custom_styles/panel = SubResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="TextboxContainer"]
margin_right = 241.0
margin_bottom = 44.0
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8

[node name="Panel" type="Panel" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 233.0
margin_bottom = 36.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextboxContainer/MarginContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 233.0
margin_bottom = 36.0

[node name="Start" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_right = 6.0
margin_bottom = 12.0
rect_min_size = Vector2( 6, 0 )
size_flags_vertical = 0
custom_fonts/font = SubResource( 3 )
text = "*"

[node name="Label2" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
anchor_top = 0.064
anchor_bottom = 0.064
margin_left = 10.0
margin_top = 1.0
margin_right = 215.0
margin_bottom = 23.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 3 )
autowrap = true
clip_text = true

[node name="End" type="Label" parent="TextboxContainer/MarginContainer/HBoxContainer"]
margin_left = 219.0
margin_top = 16.0
margin_right = 225.0
margin_bottom = 28.0
rect_min_size = Vector2( 6, 0 )
size_flags_horizontal = 0
size_flags_vertical = 8
custom_fonts/font = SubResource( 3 )
text = "*"

[node name="Tween" type="Tween" parent="."]
playback_speed = 4.32
playback/speed = 4.32

[connection signal="tween_completed" from="Tween" to="." method="_on_Tween_tween_completed"]
